; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_serdes.c_b53_serdes_read_blk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_serdes.c_b53_serdes_read_blk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b53_device = type { i32 }

@B53_SERDES_PAGE = common dso_local global i32 0, align 4
@B53_SERDES_BLKADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b53_device*, i32, i32)* @b53_serdes_read_blk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_serdes_read_blk(%struct.b53_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.b53_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.b53_device* %0, %struct.b53_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.b53_device*, %struct.b53_device** %4, align 8
  %9 = load i32, i32* @B53_SERDES_PAGE, align 4
  %10 = load i32, i32* @B53_SERDES_BLKADDR, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @b53_write16(%struct.b53_device* %8, i32 %9, i32 %10, i32 %11)
  %13 = load %struct.b53_device*, %struct.b53_device** %4, align 8
  %14 = load i32, i32* @B53_SERDES_PAGE, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @b53_read16(%struct.b53_device* %13, i32 %14, i32 %15, i32* %7)
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @b53_write16(%struct.b53_device*, i32, i32, i32) #1

declare dso_local i32 @b53_read16(%struct.b53_device*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
